WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187087
[GStreamer] Coverity scan issues
https://bugs.webkit.org/show_bug.cgi?id=187087
Summary
[GStreamer] Coverity scan issues
Tomas Popela
Reported
2018-06-27 00:39:13 PDT
Error: UNINIT_CTOR (CWE-456): /usr/include/gstreamer-1.0/gst/video/video-frame.h:73: member_decl: Class member declaration for "info". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member field "m_videoFrame.info" is not initialized in this constructor nor in any functions that it calls. /usr/include/gstreamer-1.0/gst/video/video-frame.h:74: member_decl: Class member declaration for "flags". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member field "m_videoFrame.flags" is not initialized in this constructor nor in any functions that it calls. /usr/include/gstreamer-1.0/gst/video/video-frame.h:76: member_decl: Class member declaration for "buffer". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member field "m_videoFrame.buffer" is not initialized in this constructor nor in any functions that it calls. /usr/include/gstreamer-1.0/gst/video/video-frame.h:77: member_decl: Class member declaration for "meta". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member field "m_videoFrame.meta" is not initialized in this constructor nor in any functions that it calls. /usr/include/gstreamer-1.0/gst/video/video-frame.h:78: member_decl: Class member declaration for "id". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member field "m_videoFrame.id" is not initialized in this constructor nor in any functions that it calls. /usr/include/gstreamer-1.0/gst/video/video-frame.h:80: member_decl: Class member declaration for "data". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member field "m_videoFrame.data" is not initialized in this constructor nor in any functions that it calls. /usr/include/gstreamer-1.0/gst/video/video-frame.h:81: member_decl: Class member declaration for "map". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member field "m_videoFrame.map" is not initialized in this constructor nor in any functions that it calls. /usr/include/gstreamer-1.0/gst/video/video-frame.h:84: member_decl: Class member declaration for "_gst_reserved". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member field "m_videoFrame._gst_reserved" is not initialized in this constructor nor in any functions that it calls. webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:232: member_decl: Class member declaration for "m_flags". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:203: uninit_member: Non-static class member "m_flags" is not initialized in this constructor nor in any functions that it calls. # 201| GstVideoInfo videoInfo; # 202| if (UNLIKELY(!getSampleVideoInfo(sample, videoInfo))) # 203|-> return; # 204| # 205| m_size = IntSize(GST_VIDEO_INFO_WIDTH(&videoInfo), GST_VIDEO_INFO_HEIGHT(&videoInfo)); Error: UNINIT_CTOR (CWE-456): webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.h:88: member_decl: Class member declaration for "m_sourceBufferPrivateClient". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp:62: uninit_member: Non-static class member "m_sourceBufferPrivateClient" is not initialized in this constructor nor in any functions that it calls. # 60| , m_client(client.get()) # 61| { # 62|-> } # 63| # 64| void SourceBufferPrivateGStreamer::setClient(SourceBufferPrivateClient* client) Error: UNINIT_CTOR (CWE-456): webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:138: member_decl: Class member declaration for "currentCaps". webkitgtk-2.20.3/Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:128: uninit_member: Non-static class member "currentCaps" is not initialized in this constructor nor in any functions that it calls. # 126| { # 127| gst_video_info_init(&info); # 128|-> } # 129| # 130| ~_WebKitVideoSinkPrivate()
Attachments
Patch
(2.98 KB, patch)
2018-06-27 00:42 PDT
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tomas Popela
Comment 1
2018-06-27 00:42:06 PDT
Created
attachment 343699
[details]
Patch
Tomas Popela
Comment 2
2018-06-27 01:17:12 PDT
Comment on
attachment 343699
[details]
Patch Clearing flags on attachment: 343699 Committed
r233248
: <
https://trac.webkit.org/changeset/233248
>
Tomas Popela
Comment 3
2018-06-27 01:17:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug