[GStreamer] Coverity scan issues https://bugs.webkit.org/show_bug.cgi?id=187087

Reviewed by Xabier Rodriguez-Calvar.

Fix uninitialized members.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
* platform/graphics/gstreamer/VideoSinkGStreamer.cpp:
* platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/202337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233248 268f45cc-cd09-0410-ab3c-d52691b4dbfc